# wslsm

./: .eslintrc.json  .gitignore  package.json  pnpm-lock.yaml
src/: App.tsx  Graph.tsx  index.tsx  styles.scss
src/components/: CPUinfo.tsx  Memory.tsx  Network.tsx
wslsm-server/: CMakeLists.txt  Cargo.toml
wslsm-server/exes/: cpu_freq.cpp  cpu_usage.cpp  network.cpp  total_mem.cpp  used_mem.cpp
wslsm-server/src/: main.rs
